<resources>
    <string name="app_name">Call Friend</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Call Friend</string>
    <string name="name_friend">Name Friend:</string>
    <string name="search">Search</string>
    <string name="add">Add Friend</string>
    <string name="list">List Friend</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="title_activity_list_name">ListNameActivity</string>
</resources>
